k8s/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: backend-deployment
  namespace: afghan-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend-conatiner
          image: rajeel/afghan-backend:latest
          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"

            limits:  
             memory: "1Gi"
             cpu: "500m"

          volumeMounts:
            - name: upload-storage
              mountPath: /data/uploads

      volumes:
        - name: upload-storage
          persistentVolumeClaim:
            claimName: upload-pvc
