k8s/mongodb-deployment.yaml
kind: StatefulSet
apiVersion: apps/v1

metadata:
  name: mongo-deployment
  namespace: afghan-dep

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo-container
          image: mongo:7
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
