k8s/backend-svc.yaml
kind: Service
apiVersion: v1

metadata:
  name: backend-svc
  namespace: afghan-dep

spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
