k8s/frontend-svc.yaml
kind: Service
apiVersion: v1

metadata:
  name: frontend-svc
  namespace: afghan-dep

spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 80
